Allow user to configure resized image size
