# hummingbird/docs/api/openapi.yml
@@ -36,6 +36,13 @@ paths:
             schema:
               $ref: '#/components/schemas/MediaUpload'
         required: true
+      parameters:
+        - in: query
+          name: targetSize
+          schema:
+            type: integer
+          required: false
+          description: Optional parameter to customize the processed image width size in pixels. The integer value should be between 100 and 1024.
       responses:
         '202':
           description: Successful operation
@@ -70,7 +77,7 @@ paths:
                 properties:
                   status:
                     type: string
-                    enum: [PENDING, PROCESSING, ERROR, COMPLETED]
+                    enum: [ PENDING, PROCESSING, ERROR, COMPLETED ]
         '400':
           description: Invalid input
         '404':
@@ -167,7 +174,7 @@ components:
         mediaId:
           type: string
           format: uuid
-          examples: [123e4567-e89b-12d3-a456-426614174000]
+          examples: [ 123e4567-e89b-12d3-a456-426614174000 ]
     MediaUpload:
       type: object
       properties:
@@ -186,32 +193,32 @@ components:
           type: integer
         name:
           type: string
-          examples: [image.jpg]
+          examples: [ image.jpg ]
         mimeType:
           type: string
-          examples: [image/jpeg]
+          examples: [ image/jpeg ]
         status:
           type: string
-          enum: [PENDING, PROCESSING, ERROR, COMPLETED]
+          enum: [ PENDING, PROCESSING, ERROR, COMPLETED ]
     MediaStillProcessingResponse:
       type: object
       properties:
         message:
           type: string
-          examples: ["Media is still processing"]
+          examples: [ "Media is still processing" ]
     HealthCheck:
       type: object
       properties:
         status:
           type: string
-          examples: ["ok"]
+          examples: [ "ok" ]
         service:
           type: string
-          examples: ["hummingbird"]
+          examples: [ "hummingbird" ]
         timestamp:
           type: number
           format: epoch
-          examples: [1739687421781]
+          examples: [ 1739687421781 ]
   parameters:
     mediaId:
       name: mediaId
